fix($style): fix a whitespace issue near the readmore link
prevent readmore links from bumping up against headers in summary lists

resolves #70

--- a/layouts/partials/head/critical-theme.css
+++ b/layouts/partials/head/critical-theme.css
@@ -12,6 +12,9 @@
 .muted {
   color: rgba(255, 255, 255, 0.5);
 }
+.readmore {
+  margin-bottom: 2.2em;
+}
 .responsive-iframe {
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
